[package]
name = "rust-top"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-top"
path = "src/main.rs"

[dependencies]
cache-size = "0.7.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
libc = "0.2.180"
local-ip-address = "0.6.9"
ratatui = "0.30.0"
signal-hook = "0.4.3"
sys-info = "0.9.1"
sysctl = "0.7.1"
sysinfo = "0.37.2"
chrono = "0.4"
indexmap = "2"
rsntp = { version = "4.1.1", features = ["async"] }
tokio = { version = "1", features = ["full"] }
bitflags = "2.11.0"

